--- a/src/containers/skills/Skills.scss
+++ b/src/containers/skills/Skills.scss
@@ -8,8 +8,6 @@
 
 .skills-main-div.skills-single {
   display: block;
-  max-width: 70rem;
-  margin: 0 auto;
   text-align: center;
 }
 
